# ProjectCharybdis

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  conanfile.py  justfile  pixi.toml  tsan.supp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/conan-install/: action.yml
.github/workflows/: _required.yml  build-test.yml  code-coverage.yml  codeql.yml  container.yml  integration-tests.yml  lock-check.yml  release.yml  sanitizers.yml  static-analysis.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
docs/: static-analysis.md
include/projectcharybdis/: chaos_audit.hpp  http_test_client.hpp  test_helpers.hpp  version.hpp  version.hpp.in
scripts/: check-action-pins.sh  check-version-sync.sh  generate-changelog.sh  lint.sh  mock-agamemnon.py  test-mock-agamemnon.py
src/: http_test_client.cpp  main.cpp
test/: CMakeLists.txt
test/src/: test_chaos_api.cpp  test_chaos_audit_unit.cpp  test_chaos_resilience.cpp  test_helpers_unit.cpp  test_http_client_unit.cpp  test_main.cpp  test_malformed_messages.cpp  test_payload_fuzzing.cpp  test_protocol_correctness.cpp
